--- a/src/pages/Hobbies/Hobbies.scss
+++ b/src/pages/Hobbies/Hobbies.scss
@@ -21,13 +21,16 @@
     .hobby {
       display: flex;
       align-items: center;
+      margin-bottom: .5rem;
 
       .icon {
         height: 2.5rem;
         width: 2.5rem;
-        display: block;
+        display: flex;
         box-sizing: border-box;
-        margin-right: 1rem;
+        margin-right: .75rem;
+        align-items: center;
+        justify-content: center;
 
         em {
           font-size: 2rem;
