--- a/src/pages/Works/Works.scss
+++ b/src/pages/Works/Works.scss
@@ -35,6 +35,10 @@
       align-items: center;
       height: 240px;
 
+      &:hover {
+        box-shadow: 2px 2px 6px rgba(45, 45, 45, .5), -1px -1px 2px rgba(45, 45, 45, .5);
+      }
+
       .picture {
         overflow: hidden;
         height: 100%;
@@ -46,7 +50,7 @@
           width: 100%;
           height: 100%;
           object-fit: cover;
-          filter: grayscale(.85);
+          filter: grayscale(.75);
           transition: all .75s ease-in-out;
           transform: scale(1);
           cursor: pointer;
